@@ -26,7 +26,6 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import com.google.common.util.concurrent.ListenableFuture;
-import org.apache.druid.common.config.NullHandling;
 import org.apache.druid.data.input.Committer;
 import org.apache.druid.data.input.InputRow;
 import org.apache.druid.data.input.MapBasedInputRow;
@@ -38,10 +37,11 @@ import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.common.granularity.Granularities;
 import org.apache.druid.java.util.common.granularity.Granularity;
 import org.apache.druid.query.SegmentDescriptor;
+import org.apache.druid.segment.SegmentSchemaMapping;
 import org.apache.druid.segment.handoff.SegmentHandoffNotifier;
 import org.apache.druid.segment.handoff.SegmentHandoffNotifierFactory;
 import org.apache.druid.segment.loading.DataSegmentKiller;
-import org.apache.druid.segment.realtime.FireDepartmentMetrics;
+import org.apache.druid.segment.realtime.SegmentGenerationMetrics;
 import org.apache.druid.timeline.DataSegment;
 import org.apache.druid.timeline.partition.NumberedShardSpec;
 import org.easymock.EasyMock;
@@ -54,10 +54,11 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
+import javax.annotation.Nullable;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -67,11 +68,13 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 
 public class StreamAppenderatorDriverTest extends EasyMockSupport
 {
   private static final String DATA_SOURCE = "foo";
   private static final String VERSION = "abc123";
+  private static final String UPGRADED_VERSION = "xyz456";
   private static final ObjectMapper OBJECT_MAPPER = new DefaultObjectMapper();
   private static final int MAX_ROWS_IN_MEMORY = 100;
   private static final int MAX_ROWS_PER_SEGMENT = 3;
@@ -105,10 +108,6 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
   @Rule
   public TemporaryFolder temporaryFolder = new TemporaryFolder();
 
-  static {
-    NullHandling.initializeForTests();
-  }
-
   @Before
   public void setUp() throws Exception
   {
@@ -124,10 +123,10 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
         streamAppenderatorTester.getAppenderator(),
         allocator,
         segmentHandoffNotifierFactory,
-        new TestUsedSegmentChecker(streamAppenderatorTester.getPushedSegments()),
+        new TestPublishedSegmentRetriever(streamAppenderatorTester.getPushedSegments()),
         dataSegmentKiller,
         OBJECT_MAPPER,
-        new FireDepartmentMetrics()
+        new SegmentGenerationMetrics()
     );
 
     EasyMock.replay(dataSegmentKiller);
@@ -244,6 +243,44 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
     }
 
     driver.registerHandoff(published).get(HANDOFF_CONDITION_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS);
+  }
+
+  @Test
+  public void testHandoffUpgradedSegments()
+      throws IOException, InterruptedException, TimeoutException, ExecutionException
+  {
+    final TestCommitterSupplier<Integer> committerSupplier = new TestCommitterSupplier<>();
+
+    Assert.assertNull(driver.startJob(null));
+
+    for (int i = 0; i < ROWS.size(); i++) {
+      committerSupplier.setMetadata(i + 1);
+      Assert.assertTrue(driver.add(ROWS.get(i), "dummy", committerSupplier, false, true).isOk());
+    }
+
+    driver.persist(committerSupplier.get());
+
+    // There is no remaining rows in the driver, and thus the result must be empty
+    final SegmentsAndCommitMetadata segmentsAndCommitMetadata = driver.publishAndRegisterHandoff(
+        makeUpgradingPublisher(),
+        committerSupplier.get(),
+        ImmutableList.of("dummy")
+    ).get(PUBLISH_TIMEOUT_MILLIS, TimeUnit.MILLISECONDS);
+
+    Assert.assertNotNull(segmentsAndCommitMetadata.getUpgradedSegments());
+    Assert.assertEquals(
+        segmentsAndCommitMetadata.getSegments().size(),
+        segmentsAndCommitMetadata.getUpgradedSegments().size()
+    );
+
+    Set<SegmentDescriptor> expectedHandedOffSegments = new HashSet<>();
+    for (DataSegment segment : segmentsAndCommitMetadata.getSegments()) {
+      expectedHandedOffSegments.add(segment.toDescriptor());
+    }
+    for (DataSegment segment : segmentsAndCommitMetadata.getUpgradedSegments()) {
+      expectedHandedOffSegments.add(segment.toDescriptor());
+    }
+    Assert.assertEquals(expectedHandedOffSegments, segmentHandoffNotifierFactory.getHandedOffSegmentDescriptors());
   }
 
   @Test
@@ -375,18 +412,59 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
 
   static TransactionalSegmentPublisher makeOkPublisher()
   {
-    return (segmentsToBeOverwritten, segmentsToPublish, commitMetadata) ->
-        SegmentPublishResult.ok(Collections.emptySet());
+    return makePublisher(
+        (segmentsToPublish) -> SegmentPublishResult.ok(Set.of())
+    );
+  }
+
+  private TransactionalSegmentPublisher makeUpgradingPublisher()
+  {
+    return makePublisher((segmentsToPublish) -> {
+      Set<DataSegment> allSegments = new HashSet<>(segmentsToPublish);
+      int id = 0;
+      for (DataSegment segment : segmentsToPublish) {
+        DataSegment upgradedSegment = DataSegment.builder(segment)
+                                                 .shardSpec(new NumberedShardSpec(id, 0))
+                                                 .dataSource(DATA_SOURCE)
+                                                 .interval(Intervals.ETERNITY)
+                                                 .version(UPGRADED_VERSION)
+                                                 .lastCompactionState(null)
+                                                 .build();
+
+        id++;
+        allSegments.add(upgradedSegment);
+      }
+      return SegmentPublishResult.ok(allSegments);
+    });
   }
 
   static TransactionalSegmentPublisher makeFailingPublisher(boolean failWithException)
   {
-    return (segmentsToBeOverwritten, segmentsToPublish, commitMetadata) -> {
+    return makePublisher((segmentsToPublish) -> {
       final RuntimeException exception = new RuntimeException("test");
       if (failWithException) {
         throw exception;
       }
       return SegmentPublishResult.fail(exception.getMessage());
+    });
+  }
+
+  private static TransactionalSegmentPublisher makePublisher(
+      Function<Set<DataSegment>, SegmentPublishResult> publishFunction
+  )
+  {
+    return new TransactionalSegmentPublisher()
+    {
+      @Override
+      public SegmentPublishResult publishAnnotatedSegments(
+          @Nullable Set<DataSegment> segmentsToBeOverwritten,
+          Set<DataSegment> segmentsToPublish,
+          @Nullable Object commitMetadata,
+          @Nullable SegmentSchemaMapping segmentSchemaMapping
+      )
+      {
+        return publishFunction.apply(segmentsToPublish);
+      }
     };
   }
 
@@ -459,6 +537,7 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
   {
     private boolean handoffEnabled = true;
     private long handoffDelay;
+    private final Set<SegmentDescriptor> handedOffSegmentDescriptors = new HashSet<>();
 
     public void disableHandoff()
     {
@@ -470,8 +549,15 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
       handoffDelay = delay;
     }
 
+    public Set<SegmentDescriptor> getHandedOffSegmentDescriptors()
+    {
+      synchronized (handedOffSegmentDescriptors) {
+        return ImmutableSet.copyOf(handedOffSegmentDescriptors);
+      }
+    }
+
     @Override
-    public SegmentHandoffNotifier createSegmentHandoffNotifier(String dataSource)
+    public SegmentHandoffNotifier createSegmentHandoffNotifier(String dataSource, String taskId)
     {
       return new SegmentHandoffNotifier()
       {
@@ -494,6 +580,9 @@ public class StreamAppenderatorDriverTest extends EasyMockSupport
             }
 
             exec.execute(handOffRunnable);
+            synchronized (handedOffSegmentDescriptors) {
+              handedOffSegmentDescriptors.add(descriptor);
+            }
           }
           return true;
         }
